--- a/1706600926608luma2.html
+++ b/1706600926608luma2.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jan 29, 2024 05:02:31 pm</span></a>
+<a href="#"><span class="badge badge-primary">Jan 30, 2024 01:18:46 pm</span></a>
 </li>
 </ul>
 </div>
@@ -74,14 +74,14 @@
 </ul>
 </div>    <div class="test-list-wrapper scrollable">
       <ul class="test-list-item">
-        <li class="test-item"  status="fail" test-id="6"
+        <li class="test-item"  status="fail" test-id="1"
           author=""
           tag=""
           device="">
           <div class="test-detail">
             <p class="name">Verify the Title of Luma</p>
             <p class="text-sm">
-              <span>5:02:31 pm</span> / <span>00:00:33:100</span>
+              <span>1:18:46 pm</span> / <span>00:00:20:150</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -90,10 +90,10 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">Verify the Title of Luma</h5>
-<span class='badge badge-success'>01.29.2024 5:02:31 pm</span>
-<span class='badge badge-danger'>01.29.2024 5:03:04 pm</span>
-<span class='badge badge-default'>00:00:33:100</span>
-&middot; <span class='uri-anchor badge badge-default'>#test-id=6</span>
+<span class='badge badge-success'>01.30.2024 1:18:46 pm</span>
+<span class='badge badge-danger'>01.30.2024 1:19:07 pm</span>
+<span class='badge badge-default'>00:00:20:150</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
 <span title='Expand all nodes' class='badge badge-default pointer float-right et'><i class="fa fa-expand"></i></span>
@@ -105,43 +105,43 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>5:02:35 pm</td>
+        <td>1:18:48 pm</td>
         <td>
           Luma title is displayed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>5:02:35 pm</td>
+        <td>1:18:48 pm</td>
         <td>
           Luma User is displayed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>5:02:35 pm</td>
+        <td>1:18:48 pm</td>
         <td>
           Password is displayed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>5:02:43 pm</td>
+        <td>1:18:55 pm</td>
         <td>
           Login not Successful
     <div class="row mb-3"><div class="col-md-3">
-<img data-featherlight='D:\Eclipse_training\Java2024_Selenium\verifylogin3.png' src="D:\Eclipse_training\Java2024_Selenium\verifylogin3.png">
+<img data-featherlight='D:\Training\Eclipse\Jan2024_SeleniumClass\verifylogin1.png' src="D:\Training\Eclipse\Jan2024_SeleniumClass\verifylogin1.png">
     
     </div></div>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>5:03:04 pm</td>
+        <td>1:19:07 pm</td>
         <td>
           Login not Successful
     <div class="row mb-3"><div class="col-md-3">
-<img data-featherlight='D:\Eclipse_training\Java2024_Selenium\verifylogin4.png' src="D:\Eclipse_training\Java2024_Selenium\verifylogin4.png">
+<img data-featherlight='D:\Training\Eclipse\Jan2024_SeleniumClass\verifylogin.png' src="D:\Training\Eclipse\Jan2024_SeleniumClass\verifylogin.png">
     
     </div></div>
         </td>
@@ -165,13 +165,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jan 29, 2024 05:02:31 pm</h3>
+<h3>Jan 30, 2024 01:18:46 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jan 29, 2024 05:03:04 pm</h3>
+<h3>Jan 30, 2024 01:19:07 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -241,7 +241,7 @@
 </div></div>
 <script>
 var timeline = {
-"Verify the Title of Luma":33.1
+"Verify the Title of Luma":20.15
 };
 </script>
 <div class="row">
